// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component Should have container classname 1`] = `
<div
  className="container"
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;

exports[`Container component Should ignore max prop on non desktop and non widescreen breakpoint 1`] = `
<div
  className="container is-fullhd"
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;

exports[`Container component Should use max prop on desktop breakpoint 1`] = `
<div
  className="container is-max-desktop"
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;
